force-app/main/default/objects/Payment_Schedule_Item__c/Payment_Schedule_Item__c.object-meta.xml
<CustomObject>
    <description>Individual payment items in a payment schedule</description>
    <label>Payment Schedule Item</label>
    <nameField>
        <displayFormat>PSI-{000000}</displayFormat>
        <label>Payment Schedule Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>