force-app/main/default/objects/Payment_Schedule_Item__c/fields/Additional_Products_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products_Amount__c</fullName>
    <label>Additional Products Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>