force-app/main/default/objects/Payment_Schedule_Item__c/fields/Bank2_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bank2_Fee_Amount__c</fullName>
    <label>Bank 2 Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>