force-app/main/default/objects/Payment_Schedule_Item__c/fields/Banking_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Banking_Fee_Amount__c</fullName>
    <label>Banking Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>