force-app/main/default/objects/Payment_Schedule_Item__c/fields/Cleared_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Amount__c</fullName>
    <description>Calculated cleared amount based on status. Cleared = Total_Payment__c + Wires_received__c. NSF = Wires_received__c only. Other statuses = 0.</description>
    <formula>IF(
    ISPICKVAL(Status__c, &quot;Cleared&quot;),
    (IF(ISBLANK(Total_Payment__c), 0, Total_Payment__c) + IF(ISBLANK(Wires_received__c), 0, Wires_received__c)),
    IF(
        ISPICKVAL(Status__c, &quot;NSF&quot;),
        IF(ISBLANK(Wires_received__c), 0, Wires_received__c),
        0
    )
)</formula>
    <label>Cleared Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>