force-app/main/default/objects/Payment_Schedule_Item__c/fields/EPPS_EFT_Status__c.field-meta.xml
<CustomField>
    <fullName>EPPS_EFT_Status__c</fullName>
    <label>EPPS EFT Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>