force-app/main/default/objects/Payment_Schedule_Item__c/fields/EPPS_NSF_Return_Code__c.field-meta.xml
<CustomField>
    <fullName>EPPS_NSF_Return_Code__c</fullName>
    <label>EPPS NSF Return Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>