force-app/main/default/objects/Payment_Schedule_Item__c/fields/EPPS_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>EPPS_Settlement_Date__c</fullName>
    <label>EPPS Settlement Date</label>
    <type>DateTime</type>
</CustomField>