force-app/main/default/objects/Payment_Schedule_Item__c/fields/fee_ContactName__c.field-meta.xml
<CustomField>
    <fullName>fee_ContactName__c</fullName>
    <label>fee.ContactName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>