force-app/main/default/objects/Payment_Schedule_Item__c/fields/fee_Description__c.field-meta.xml
<CustomField>
    <fullName>fee_Description__c</fullName>
    <label>fee.Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>