force-app/main/default/objects/Payment_Schedule_Item__c/fields/fee_PaidToCity__c.field-meta.xml
<CustomField>
    <fullName>fee_PaidToCity__c</fullName>
    <label>fee.PaidToCity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>