force-app/main/default/objects/Payment_Schedule_Item__c/fields/fee_PaidToCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>fee_PaidToCustomerNumber__c</fullName>
    <label>fee.PaidToCustomerNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>