force-app/main/default/objects/Payment_Schedule_Item__c/fields/fee_PaidToName__c.field-meta.xml
<CustomField>
    <fullName>fee_PaidToName__c</fullName>
    <label>fee.PaidToName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>