force-app/main/default/objects/Payment_Schedule_Item__c/fields/fee_PaidToPhone__c.field-meta.xml
<CustomField>
    <fullName>fee_PaidToPhone__c</fullName>
    <label>fee.PaidToPhone</label>
    <type>Phone</type>
</CustomField>