force-app/main/default/objects/Payment_Schedule_Item__c/fields/fee_PaidToStreet2__c.field-meta.xml
<CustomField>
    <fullName>fee_PaidToStreet2__c</fullName>
    <label>fee.PaidToStreet2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>