force-app/main/default/objects/Payment_Schedule_Item__c/fields/fee_PaidToZip__c.field-meta.xml
<CustomField>
    <fullName>fee_PaidToZip__c</fullName>
    <label>fee.PaidToZip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>