force-app/main/default/objects/Payment_Schedule_Item__c/fields/Fees_Unprocessed__c.field-meta.xml
<CustomField>
    <fullName>Fees_Unprocessed__c</fullName>
    <description>Payment Fees that do not have a Fee Id</description>
    <inlineHelpText>Payment Fees that do not have a Fee Id</inlineHelpText>
    <label>Fees Unprocessed</label>
    <summaryFilterItems>
        <field>Payment_Fee__c.Fee_Id__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Fee__c.Payment_Schedule_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>