force-app/main/default/objects/Payment_Schedule_Item__c/fields/Immediate_Processing_Requested__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Processing_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Processing Requested</label>
    <type>Checkbox</type>
</CustomField>