force-app/main/default/objects/Payment_Schedule_Item__c/fields/Is_Program_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Program_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if program fees are complete and banking should switch to secondary</description>
    <label>Is Program Complete</label>
    <type>Checkbox</type>
</CustomField>