force-app/main/default/objects/Payment_Schedule_Item__c/fields/Last_EPPS_Integration__c.field-meta.xml
<CustomField>
    <fullName>Last_EPPS_Integration__c</fullName>
    <label>Last EPPS Integration</label>
    <type>DateTime</type>
</CustomField>