force-app/main/default/objects/Payment_Schedule_Item__c/fields/Net_Draft_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Draft_Amount__c</fullName>
    <description>Net amount after deducting fees that goes to program/escrow split</description>
    <label>Net Draft Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>