force-app/main/default/objects/Payment_Schedule_Item__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <description>Parent payment plan for this schedule item</description>
    <label>Payment Plan</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Payment Schedule Items</relationshipLabel>
    <relationshipName>Payment_Schedule_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>