force-app/main/default/objects/Payment_Schedule_Item__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <formula>Payment_Plan__r.Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Opportunity</label>
    <type>Text</type>
</CustomField>