force-app/main/default/objects/Payment_Schedule_Item__c/fields/Retainer_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Fee_Amount__c</fullName>
    <label>Retainer Fee Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>