force-app/main/default/objects/Payment_Schedule_Item__c/fields/Running_Balance__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance__c</fullName>
    <description>Running total of all payments made up to this point</description>
    <label>Running Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>