force-app/main/default/objects/Payment_Schedule_Item__c/fields/Savings_Balance__c.field-meta.xml
<CustomField>
    <fullName>Savings_Balance__c</fullName>
    <description>Running escrow balance for this payment</description>
    <label>Savings Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>