force-app/main/default/objects/Payment_Schedule_Item__c/fields/To_Escrow_Amount__c.field-meta.xml
<CustomField>
    <fullName>To_Escrow_Amount__c</fullName>
    <label>To Escrow Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>