force-app/main/default/objects/Payment_Schedule_Item__c/fields/Void_Requested__c.field-meta.xml
<CustomField>
    <fullName>Void_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Void Requested</label>
    <type>Checkbox</type>
</CustomField>