force-app/main/default/objects/Payment_Schedule_Item__c/fields/Wired_Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Wired_Payment_Count__c</fullName>
    <description>Count of all Wired Payments for this schedule item</description>
    <label>Wired Payment Count</label>
    <summaryForeignKey>Wired_Payment__c.Payment_Schedule_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>