force-app/main/default/objects/Payment_Schedule_Item__c/fields/Wires_received__c.field-meta.xml
<CustomField>
    <fullName>Wires_received__c</fullName>
    <label>Wires received</label>
    <summarizedField>Wired_Payment__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Wired_Payment__c.Payment_Schedule_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>