force-app/main/default/objects/Payment_Schedule_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Fee_Amount__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Total_Payment__c</columns>
    <columns>Savings_Balance__c</columns>
    <columns>Running_Balance__c</columns>
    <columns>Banking_Fee_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>